methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:84: error: ':' expected but ')' found.
 def fairev(u) { 
             ^MethodsPicture:93: error: identifier expected but '}' found.
}
^