methods.picture.MethodsPicture.scala.code
avance(2);fairev(u)
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(7)
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(7)
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
gauche();avance(7);droite()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
recule(7)
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
recule(7)
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
gauche();avance(7);droite()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(7)
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(7)
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
avance(2);fairev()
avance(2);gauche()
droite();avance(14);gauche();recule(14)


 def fairev(u) { 
   	u=setCouleurBrosse()
    baisseBrosse();leveBrosse()
    avance();gauche()
    avance();baisseBrosse();leveBrosse()
    recule();droite()
    avance();baisseBrosse();leveBrosse()
  }